# tfexplain

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: release.yml
docs/: demo.sh
docs/wiki/: AI-Mode.md  CI-and-PR-Review.md  Commands.md  Examples.md  Getting-Started.md  Home.md  Roadmap.md  Safety-and-Privacy.md  _Sidebar.md
samples/: README.md
samples/plans/: 01-aws-web-create.json  02-aws-rds-replace.json  03-azurerm-aks-update.json  04-azurerm-keyvault-delete.json  05-google-cloudrun-create.json  06-google-gke-replace.json  07-kubernetes-rollout-update.json  08-helm-release-update.json  09-cloudflare-dns-update.json  10-random-tls-create.json  11-datadog-monitor-delete.json  12-mixed-multicloud-module.json
samples/terraform-code/aws-webapp/: README.md  main.tf  outputs.tf  variables.tf
samples/terraform-code/azurerm-aks/: README.md  main.tf  outputs.tf  variables.tf
samples/terraform-code/cloudflare-dns/: main.tf  outputs.tf  variables.tf
samples/terraform-code/google-cloudrun/: main.tf  outputs.tf  variables.tf
samples/terraform-code/kubernetes-helm/: README.md  main.tf  outputs.tf  variables.tf
samples/terraform-code/local-pipe-plan/: README.md  main.tf  outputs.tf  tfplan  variables.tf
samples/terraform-code/random-tls-module/: README.md  main.tf  outputs.tf  variables.tf
samples/tfplans/: .gitignore  README.md  generate.sh
samples/tfplans/source/terraform-data/: README.md  main.tf  outputs.tf  variables.tf
samples/tfplans/vars/: base.tfvars  changed.tfvars  create.tfvars
scripts/: tfexplain_binary.py
src/tfexplain/: __init__.py  ai.py  cli.py  code.py  commands.py  errors.py  models.py  plan.py  render.py  risk.py
tests/: test_ai.py  test_cli.py  test_code.py  test_extra_commands.py  test_plan.py  test_samples.py  test_tfplan_samples.py
